Include run conf in DagRunInfo
